--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <div id="subscribe-container">
   <button id="subscribe-btn" class="subscribe-btn" onclick="subscribe()">Subscribe</button>
-  <p id="subscribe-text">Subscribe Our Channel to Unlock Channel, It is free</p>
+  <p id="subscribe-text">Subscribe Our YouTube Channel 👆(It is free)to Unlock Premium Movies Channel</p>
 </div>
 
 <div id="join-container">
