--- a/minecraft.html
+++ b/minecraft.html
@@ -63,7 +63,7 @@
 </div>
 
 <div class="join-container">
-  <button class="join-btn" onclick="joinTelegram()">Join Channel</button>
+  <button class="join-btn" onclick="joinTelegram()">Get Shader </button>
 </div>
 
 <div class="loading">Checking...</div>
@@ -84,7 +84,7 @@
   }
 
   function joinTelegram() {
-    window.open('https://t.me/shorttee', '_blank');
+    window.open('https://funpavo.com/s/1AQsSbzKP_xKzBViuM8FIHQ', '_blank');
   }
 </script>
 
