--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <div id="subscribe-container">
   <button id="subscribe-btn" class="subscribe-btn" onclick="subscribe()">Subscribe</button>
   <p id="subscribe-text">Subscribe Our YouTube Channel 👆(It is free)to Unlock Premium Movies Channel</p>
+  <p> Click the button above then subscribe our channel and come back here, then wait for sometime</p>
 </div>
 
 <div id="join-container">
