--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <div id="subscribe-container">
   <button id="subscribe-btn" class="subscribe-btn" onclick="subscribe()">Subscribe</button>
-  <p id="subscribe-text">Subscribe Our YouTube Channel 👆(It is free)to Unlock Premium Movies Channel</p>
+  <p id="subscribe-text">Subscribe Our YouTube Channel 👆(It is free)to Unlock Movie</p>
 </div>
 
 <div id="join-container">
@@ -67,7 +67,7 @@
     // Open link in new tab
     window.open('https://youtube.com/@today4gaming?si=uO-jqHDsiiSh-lKn', '_blank');
     
-    // After 20 seconds, display the "Join Channel" button
+    // After 20 seconds, display the "Get Movie" button
     setTimeout(function() {
       document.getElementById("loading").style.display = "none";
       document.getElementById("join-btn").style.display = "block";
