--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 
 <div id="join-container">
-  <button id="join-btn" class="join-btn" onclick="joinTelegram()">Join Channel</button>
+  <button id="join-btn" class="join-btn" onclick="joinTelegram()">Get Movie</button>
 </div>
 
 <div id="loading" class="loading">Checking...</div>
