--- a/index.html
+++ b/index.html
@@ -1,84 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Subscribe Button</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin-top: 50px;
-  }
-  .subscribe-btn {
-    padding: 15px 30px;
-    background-color: #ff0000;
-    color: #ffffff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 18px;
-    transition: background-color 0.3s ease;
-  }
-  .subscribe-btn:hover {
-    background-color: #ff3333;
-  }
-  .join-btn {
-    display: none;
-    margin-top: 20px;
-    padding: 15px 30px;
-    background-color: #0088ff;
-    color: #ffffff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 18px;
-    transition: background-color 0.3s ease;
-  }
-  .join-btn:hover {
-    background-color: #33aaff;
-  }
-  .loading {
-    display: none;
-    margin-top: 20px;
-    font-size: 18px;
-    color: #333333;
-  }
-</style>
-  <meta name="monetag" content="4a0ea88940a49f6b47d7e5d1939f0599">
+  <meta http-equiv="refresh" content="0; URL='https://newsy1010.blogspot.com/2024/03/unveiling-anticipated-iphone-16-series.html'" />
 </head>
 <body>
-
-<div id="subscribe-container">
-  <button id="subscribe-btn" class="subscribe-btn" onclick="subscribe()">Subscribe</button>
-  <p id="subscribe-text">Subscribe Our YouTube Channel 👆(It is free)to Unlock Movie</p>
-</div>
-
-<div id="join-container">
-  <button id="join-btn" class="join-btn" onclick="joinTelegram()">Get Movie</button>
-</div>
-
-<div id="loading" class="loading">Checking...</div>
-
-<script>
-  function subscribe() {
-    // Show loading message
-    document.getElementById("loading").style.display = "block";
-    
-    // Open link in new tab
-    window.open('https://youtube.com/@today4gaming?si=uO-jqHDsiiSh-lKn', '_blank');
-    
-    // After 20 seconds, display the "Get Movie" button
-    setTimeout(function() {
-      document.getElementById("loading").style.display = "none";
-      document.getElementById("join-btn").style.display = "block";
-    }, 10000);
-  }
-
-  function joinTelegram() {
-    window.open('https://t.me/+_f6u_rNxD2A3Yzc1', '_blank');
-  }
-</script>
-
 </body>
 </html>
