--- a/index.html
+++ b/index.html
@@ -1,8 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; URL='https://shorttee.unaux.com/gHcLs'" />
+  <meta name="monetag" content="4a0ea88940a49f6b47d7e5d1939f0599">
+<style>
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.button:hover {
+  background-color: #45a049;
+}
+</style>
 </head>
 <body>
+
+<script>
+function handleClick() {
+  var button = document.getElementById("redirectButton");
+  if (button.dataset.clicked === "true") {
+    window.location.href = "https://shorttee.unaux.com/gHcLs";
+  } else {
+    button.dataset.clicked = "true";
+    button.innerHTML = "Continue";
+    window.location.href = "https://doruffleton.com/4/4681136";
+  }
+}
+</script>
+
+<center>
+  <button id="redirectButton" class="button" onclick="handleClick()">Click Here</button>
+</center>
+
 </body>
 </html>
+
