--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ function handleClick() {
 </script>
 
 <center>
-  <button id="redirectButton" class="button" onclick="handleClick()">Click Here</button>
+  <button id="redirectButton" class="button" onclick="handleClick()">Get Movie</button>
 </center>
 
 </body>
