--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 function handleClick() {
   var button = document.getElementById("redirectButton");
   if (button.dataset.clicked === "true") {
-    window.location.href = "https://shorttee.unaux.com/gHcLs";
+    window.location.href = "https://newsy1010.blogspot.com/2024/03/unveiling-anticipated-iphone-16-series.html?m=1";
   } else {
     button.dataset.clicked = "true";
     button.innerHTML = "Continue";
